# merino

./: .gitignore  Ch2. The Simple Regression Model.ipynb  Ch3. Multiple Regression Analysis - Estimation.ipynb  Ch3. Multiple Regression Analysis: Estimation.ipynb  Ch5. MRA - OLS Asymptotics.ipynb  Ch6. MRA - Further Issues.ipynb  README.md  book-outline.md  environment.yml  main.py  mlos.md  myst.yml  pre-commit.sh  pyproject.toml
markdown/: Ch10. Basic Regression Analysis with Time Series Data.md  Ch11. Further Issues in Using OLS with Time Series Data.md  Ch12. Serial Correlation and Heteroskedasticity in Time Series Regressions.md  Ch13. Pooling Cross Sections across Time - Simple Panel Data Methods.md  Ch14. Advanced Panel Data Methods.md  Ch15. Instrumental Variables Estimation and Two Stage Least Squares.md  Ch16. Simultaneous Equations Models.md  Ch17. Limited Dependent Variable Models and Sample Selection Corrections.md  Ch18. Advanced Time Series Topics.md  Ch2. The Simple Regression Model.md  Ch3. Multiple Regression Analysis - Estimation.md  Ch4. Multiple Regression Analysis - Inference.md  Ch5. MRA - OLS Asymptotics.md  Ch6. MRA - Further Issues.md  Ch7. MRA - Qualitative Regressors.md  Ch8. Heteroskedasticity.md  Ch9. Specification and Data Issues.md
notebooks/: Ch10. Basic Regression Analysis with Time Series Data.ipynb  Ch11. Further Issues in Using OLS with TIme Series Data.ipynb  Ch11. Further Issues in Using OLS with Time Series Data.ipynb  Ch12. Serial Correlation and Heteroskedasticity in Time Series Regressions.ipynb  Ch6. MRA - Further Issues.ipynb  (+13 more)
(+34 files in other folders)
