[project]
name = "merino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "jupyter>=1.1.1",
    "jupytext>=1.17.3",
    "linearmodels>=6.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pandas-datareader>=0.10.0",
    "patsy>=1.0.1",
    "ruff>=0.12.11",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "wooldridge>=0.4.5",
]
